Help plugin: CSS fixes, content frame scrollbar fix, about page (classic skin) fix

--- a/plugins/help/skins/larry/help.css
+++ b/plugins/help/skins/larry/help.css
@@ -39,7 +39,6 @@
 	background: url(help.png) center -130px no-repeat;
 }
 
-.iframebox.help_about,
 .iframebox.help_license {
 	overflow: auto;
 }
